--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
-  }
+    background-color: #ffc7f9;
+    text-align: center;}
   
   .calculator {
     padding: 20px;
-    border: 2px solid #ccc;
+    border: 2px solid #ff5ef4;
     border-radius: 10px;
-    background: #fff;
+    background: #ff56b3;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
