--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-body { 
-    background-color: #f2cdff8f;
-    color: #392941;
-    text-align: center;}
+body {
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #ffacac;
+    color: rgb(167, 0, 95);
+    }
     
