--- a/style.css
+++ b/style.css
@@ -10,4 +10,5 @@ button {
     align-items: center;
     background-color:rgb(175, 100, 225);
     color: rgb(196, 255, 244);
+    width: 10px;
     }
