--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
     color: rgb(167, 0, 95);
     }
 button {
-    align-items: center;
+    align-items: top;
     background-color:rgb(175, 100, 225);
     color: rgb(196, 255, 244);
-    width: 100px;
+    width: 200px;
+    height: 200px;
     }
 .bordered{
     
