--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ body {
     color: rgb(123, 25, 63);
     }
 .gradient-angle{
-    background: linear-gradient(45deg, #8baec4, #7f7db0, #8baec4);
+    background: linear-gradient(45deg, #c8e8fb, #abaaec, #c8e8);
 }
 button {
     align-items: top;
     background-color:rgb(175, 100, 225);
-    color: rgb(196, 255, 244);
+    color: rgb(255, 255, 255);
     width: 200px;
     height: 200px;
-    font-size: 26px;
+    font-size: 42px;
+    font-family: Lucida Handwriting;
     }
 .bordered{
     
