--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     color: rgb(123, 25, 63);
     }
 .gradient-angle{
-    background: linear-gradient(45deg, #c8e8fb, #abaaec, #c8e8);
+    background: linear-gradient(45deg, #c8e8fb, #908ef1, rgba(200, 114, 243, 0.533));
 }
 button {
     align-items: top;
