--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     align-items: center;
     text-align: center;
-    font-family: Copperplate;
+    font-family: Bookman;
     font-size: 35px;
     height: 100vh;
     margin: 0;
